--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -20,22 +20,22 @@ http {
 
         # Jenkins redirige directamente a IP:PUERTO
         location /jenkins/ {
-            return 302 http://44.222.107.95:8080/;
+            return 302 http://$HOST_IP:8080/;
         }
 
         # Portainer redirige directamente a IP:PUERTO
         location /portainer/ {
-            return 302 http://44.222.107.95:9000/;
+            return 302 http://$HOST_IP:9000/;
         }
 
         # Zabbix redirige directamente a IP:PUERTO
         location /zabbix/ {
-            return 302 http://44.222.107.95:8084/;
+            return 302 http://$HOST_IP:8084/;
         }
 
         # OwnCloud redirige directamente a IP:PUERTO
         location /owncloud/ {
-            return 302 http://44.222.107.95:8081/;
+            return 302 http://$HOST_IP:8081/;
         }
 
         # Manejo de errores (opcional)
